# phase

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  data-files.json  migration-report.json  rust-toolchain.toml
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/draft-core/: Cargo.toml
crates/draft-core/src/: extraction.rs  lib.rs  pack_generator.rs  pack_source.rs  pick_pass.rs  session.rs  set_pool.rs  types.rs  validation.rs  view.rs
crates/engine/: Cargo.toml
crates/engine-inventory-gen/: Cargo.toml
crates/engine-inventory-gen/src/: main.rs
crates/engine-wasm/: Cargo.toml
crates/engine-wasm/src/: lib.rs
crates/engine/src/: lib.rs
crates/engine/src/ai_support/: candidates.rs  context.rs  copy.rs  mod.rs
crates/engine/src/database/: card_db.rs  json_loader.rs  legality.rs  mod.rs  mtgjson.rs  oracle_loader.rs  synthesis.rs
crates/engine/src/database/forge/: cost.rs  effect.rs  filter.rs  keyword.rs  loader.rs  mod.rs  replacement.rs  static_ab.rs  svar.rs  translate.rs  trigger.rs  types.rs
crates/engine/src/game/: ability_utils.rs  casting.rs  casting_costs.rs  casting_targets.rs  combat.rs  combat_damage.rs  commander.rs  cost_payability.rs  coverage.rs  day_night.rs  deck_loading.rs  deck_validation.rs  derived.rs  devotion.rs  dungeon.rs  elimination.rs  engine.rs  engine_casting.rs  engine_debug.rs  engine_modes.rs  engine_payment_choices.rs  engine_priority.rs  engine_replacement.rs  engine_resolution_choices.rs  filter.rs  functioning_abilities.rs  game_object.rs  gap_analysis.rs  keywords.rs  layers.rs  life_costs.rs  log.rs  mana_abilities.rs  mana_payment.rs  mana_sources.rs  match_flow.rs  mod.rs  morph.rs  mulligan.rs  off_zone_characteristics.rs  (+25 more)
crates/engine/src/game/effects/: add_restriction.rs  add_target_replacement.rs  additional_combat.rs  additional_phase.rs  animate.rs  attach.rs  become_copy.rs  become_monarch.rs  bounce.rs  cascade.rs  cast_from_zone.rs  change_zone.rs  choose.rs  choose_and_sacrifice_rest.rs  choose_card.rs  choose_damage_source.rs  choose_from_zone.rs  choose_one_of.rs  clash.rs  cleanup.rs  collect_evidence.rs  connive.rs  copy_spell.rs  counter.rs  counters.rs  create_emblem.rs  deal_damage.rs  delayed_trigger.rs  destroy.rs  dig.rs  discard.rs  discover.rs  double.rs  draw.rs  effect.rs  energy.rs  exchange_control.rs  exile_from_top_until.rs  exile_top.rs  exploit.rs  (+52 more)
crates/engine/src/game/snapshots/: engine__game__scenario__tests__scenario_basic_bear.snap
crates/engine/src/parser/: ability.rs  card_parser.rs  card_type.rs  clause_shell.rs  mana_cost.rs  mod.rs  oracle.rs  oracle_casting.rs  oracle_class.rs  oracle_classifier.rs  oracle_condition.rs  oracle_cost.rs  oracle_dispatch.rs  oracle_effect.rs  oracle_keyword.rs  oracle_level.rs  oracle_modal.rs  oracle_quantity.rs  oracle_replacement.rs  oracle_saga.rs  oracle_spacecraft.rs  oracle_special.rs  oracle_static.rs  oracle_target.rs  oracle_target_scope.rs  oracle_trigger.rs  oracle_util.rs  oracle_vote.rs  oracle_warnings.rs  swallow_check.rs
crates/engine/src/parser/ast/: clause.rs  (+1 more)
crates/engine/src/schema/: mod.rs
crates/engine/src/types/: ability.rs  actions.rs  card.rs  card_type.rs  counter.rs  definitions.rs  events.rs  format.rs  game_state.rs  identifiers.rs  keywords.rs  layers.rs  log.rs  mana.rs  match_config.rs  mod.rs  phase.rs  player.rs  proposed_event.rs  replacements.rs  statics.rs  triggers.rs  zones.rs
crates/engine/tests/: floodpits_drowner.rs  integration_adventure.rs  integration_bending.rs  json_smoke_test.rs  kaito_integration.rs  oracle_parser.rs  parity.rs  rules.rs
crates/engine/tests/integration/: abigale_integration.rs  coalition_relic_integration.rs  engine_invariants.rs  floodpits_drowner.rs  gran_gran_integration.rs  greasefang_integration.rs  integration_bending.rs  integration_landfall.rs  json_smoke_test.rs  kaito_integration.rs  madame_null_integration.rs  main.rs  swans_prevention_followup.rs  tempt_with_discovery.rs  tivit_vote.rs  ureni_attack_trigger.rs  urzas_saga_chapter_two.rs
crates/engine/tests/rules/: casting.rs  combat.rs  etb.rs  keywords.rs  layers.rs  replacement.rs  sba.rs  stack.rs  targeting.rs
crates/engine/tests/snapshots/: oracle_parser__snapshot_baneslayer_angel.snap  oracle_parser__snapshot_bonesplitter.snap  oracle_parser__snapshot_bonesplitter.snap.new  oracle_parser__snapshot_counterspell.snap  oracle_parser__snapshot_forest.snap  oracle_parser__snapshot_goblin_chainwhirler.snap  oracle_parser__snapshot_jace_the_mind_sculptor.snap  oracle_parser__snapshot_jace_the_mind_sculptor.snap.new  oracle_parser__snapshot_lightning_bolt.snap  oracle_parser__snapshot_llanowar_elves.snap  oracle_parser__snapshot_mox_pearl.snap  oracle_parser__snapshot_murder.snap  oracle_parser__snapshot_questing_beast.snap  oracle_parser__snapshot_rancor.snap  oracle_parser__snapshot_rancor.snap.new  oracle_parser__snapshot_wizard_class.snap
crates/forge-server/: Cargo.toml
crates/forge-server/src/: main.rs
crates/mtgish-import/: CLAUDE.md  Cargo.toml
crates/mtgish-import/src/: lib.rs  provenance.rs  report.rs
crates/mtgish-import/src/convert/: action.rs  cast_effect.rs  companion.rs  condition.rs  cost.rs  deferred.rs  filter.rs  keyword.rs  mana.rs  mod.rs  player_effect.rs  quantity.rs  replacement.rs  result.rs  saga.rs  static_effect.rs  token.rs  trigger.rs
crates/mtgish-import/src/diff/: canonical.rs  classify.rs  mod.rs  ordering.rs
crates/mtgish-import/src/schema/: mod.rs  types.rs
crates/mtgish-import/tests/: build_fixtures.rs  discover_candidates.rs  golden_structural.rs  manifest_coverage.rs
crates/phase-server/: Cargo.toml
crates/phase-server/src/: admin.rs  main.rs
crates/server-core/: Cargo.toml
crates/server-core/src/: deck_resolve.rs  draft_session.rs  filter.rs  harness.rs  lib.rs  lobby.rs  persist.rs  protocol.rs  reconnect.rs  session.rs  starter_decks.rs
(+30477 files in other folders)
