cargo-features = ["codegen-backend"]

[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["client/src-tauri"]

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
rpds = { version = "1.2" }

[profile.dev]
opt-level = 0
debug = "line-tables-only"
split-debuginfo = "unpacked"
codegen-backend = "cranelift"

[profile.dev.build-override]
codegen-backend = "llvm"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1
codegen-backend = "llvm"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
panic = 'abort'

# Native server: speed over size, unwind so tokio catches per-task panics
[profile.server-release]
inherits = "release"
opt-level = 2
panic = 'unwind'
