[package]
name = "phase-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
engine = { path = "../../crates/engine" }
phase-ai = { path = "../../crates/phase-ai" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
