[package]
name = "draft-core"
version.workspace = true
edition = "2021"
license.workspace = true

[dependencies]
engine = { path = "../engine" }
serde = { workspace = true }
rand = "0.9"
rand_chacha = "0.9"
thiserror = "2"

serde_json = "1"

[[bin]]
name = "draft-pool-gen"
path = "src/bin/draft_pool_gen.rs"

[dev-dependencies]
