[package]
name = "engine-inventory-gen"
version.workspace = true
license.workspace = true
edition = "2021"

[dependencies]
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
serde = { workspace = true }
serde_json = "1"
walkdir = "2"
regex = "1"
anyhow = "1"
