[package]
name = "engine-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
engine = { path = "../engine" }
forge-ai = { path = "../forge-ai" }
rand = "0.9"
wasm-bindgen = "0.2.114"
tsify = { version = "0.5", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.3", features = ["wasm_js"] }
