[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
rpds = { workspace = true }
thiserror = "2"
walkdir = "2"
rand = "0.9"
rand_chacha = "0.9"
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.6"

serde_json = "1"

[[bin]]
name = "coverage-report"
path = "src/bin/coverage_report.rs"

[[bin]]
name = "card-data-export"
path = "src/bin/card_data_export.rs"

[dev-dependencies]
tempfile = "3"
