[package]
name = "server-core"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
engine = { path = "../engine" }
phase-ai = { path = "../phase-ai" }
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.9"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
